--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
-*.orig
+*.orig.*
 
 # Created by git when using merge tools for conflicts
 *.BACKUP.*
@@ -36,7 +36,7 @@ sketch
 ### ReactNative ###
 # React Native Stack Base
 
-.expo
+.expo/*
 __generated__
 
 ### ReactNative.Android Stack ###
@@ -93,7 +93,7 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
+*.jks
 #*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
@@ -164,7 +164,7 @@ gradle-app.setting
 
 ### ReactNative.Node Stack ###
 # Logs
-npm-debug.log*
+npm-debug.*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
@@ -200,7 +200,7 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules/**/*
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -360,4 +360,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/git,react,reactnative,vscode,windows
+*.p8
+*.p12
+*.key
+*.mobileprovision
+web-build/
