--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/bottom-tabs": "^5.11.6",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-constants": "~9.3.3",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -25,7 +28,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "expo-permissions": "~10.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
