--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "validate.js": "^0.13.1",
-    "expo-permissions": "~10.0.0"
+    "expo-permissions": "~10.0.0",
+    "expo-av": "~8.7.0",
+    "expo-screen-orientation": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
